# shpc

./: Cargo.toml  LICENSE  README.md
benches/: sh_coefficients.rs
shpc/: Cargo.toml
shpc/benches/: sh_coefficients.rs
shpc/src/: lib.rs  sh.rs  shan.rs
shpc_data_json/: Cargo.toml
shpc_data_json/src/: main.rs
shpc_json/: Cargo.toml
shpc_json/src/: main.rs
shpc_lib/: Cargo.toml
shpc_lib/benches/: sh_coefficients.rs
shpc_lib/src/: lib.rs  sh.rs  shan.rs
src/: lib.rs  main.rs  sh.rs  shan.rs
test_data/: coeffs.csv
