[package]
name = "shpc"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
edition = "2021"

[dependencies]
binrw = "0.8.4"
serde = { version = "1.0", features=["derive"], optional = true }
glam = "0.20.1"
ssbh_lib = { git = "https://github.com/ultimate-research/ssbh_lib" }
ssbh_write = { git = "https://github.com/ultimate-research/ssbh_lib" }

[dev-dependencies]
approx = "0.5.0"
criterion = "0.3"

[features]
serde = ["dep:serde", "ssbh_lib/serde"]

[[bench]]
name = "sh_coefficients"
harness = false